# aiwapos-electron

./: .env  .env_example  .eslintrc.js  package.json  tailwind.config.js  tsconfig.json
frappe_docker/apps/pos_api/: README.md  pyproject.toml
frappe_docker/apps/pos_api/pos_api/: hooks.py  install.py  modules.txt
frappe_docker/apps/pos_api/pos_api/api/: __init__.py  _utils.py  auth.py  customers.py  items.py  kot.py  print_helpers.py  sales_invoice.py  sales_order.py  settings.py  shift.py
frappe_docker/apps/pos_api/pos_api/fixtures/: print_format.json
frappe_docker/apps/pos_api/pos_api/pos_api/doctype/pos_mode_of_payment_row/: pos_mode_of_payment_row.json  pos_mode_of_payment_row.py
frappe_docker/apps/pos_api/pos_api/pos_api/doctype/pos_print_format_row/: pos_print_format_row.json  pos_print_format_row.py
frappe_docker/apps/pos_api/pos_api/pos_api/doctype/pos_sales_person_row/: pos_sales_person_row.json  pos_sales_person_row.py
frappe_docker/apps/pos_api/pos_api/pos_api/doctype/pos_settings/: pos_settings.json  pos_settings.py
frappe_docker/apps/pos_api/pos_api/pos_api/doctype/shift_closing_entry/: shift_closing_entry.json  shift_closing_entry.py
frappe_docker/apps/pos_api/pos_api/pos_api/doctype/shift_denomination_row/: shift_denomination_row.json  shift_denomination_row.py
frappe_docker/apps/pos_api/pos_api/pos_api/doctype/shift_opening_entry/: shift_opening_entry.json  (+1 more)
frappe_docker/apps/pos_api/pos_api/seed/: seed_demo.py
frappe_docker/apps/pos_api/pos_api/templates/client_side/: invoice_standard.html  kot_standard.html  session_report.html
(+173 files in other folders)
